<resources>
    <string name="app_name">Keybind Helper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--Navigation-->
    <string name="AppTittle">Keybind Helper</string>
    <string name="Projects">Projects</string>
    <string name="Settings">Settings</string>

    <!--Group-->
    <string name="AddGroup">Add Group</string>

    <!--Edit Keybind Dialog-->
    <string name="EditKeybind">Edit Keybind</string>


    <string name="Name">Name</string>
    <string name="EditKeybind1">Edit Keybind 1</string>
    <string name="EditKeybind2">Edit Keybind 2</string>
    <string name="EditKeybind3">Edit Keybind 3</string>

    <string name="ClearButton">X</string>
    <string name="input_cannot_be_empty" />
</resources>