<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.keybindhelper.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.keybindhelper.ui.projects.ProjectsFragment"
        android:label="@string/Projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.keybindhelper.ui.settings.SettingsFragment"
        android:label="@string/Settings"
        tools:layout="@layout/fragment_settings" />
</navigation>